--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<style>
 	h1,b{text-align: center;}
 		body{
-			background-color: #444; 
+			background-color: gray; 
 		 font-family: "Courier New","Tahoma";
 		color: white; 
 		}
@@ -88,7 +88,7 @@
 		width:750px;
 		margin-left:auto;
 		margin-right:auto;
-		margin-top:100px;
+		
 		font-size:14px;
 	}
 	a {
