--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Pablo Ykaro - Dev !</title>
 	<style>
-	h1,b{text-align: center;}
+		*{background:gray;}
+		h1,b{text-align: center;}
 		body{
-			background-color: gray; 
+	
 		 font-family: "Courier New","Tahoma";
 		color: white; 
 		}
