--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Pablo Ykaro - Dev !</title>
 	<style>
-		*{background:gray;}
+		
 		h1,b{text-align: center;}
 		body{
-	
+	background:gray;
 		 font-family: "Courier New","Tahoma";
 		color: white; 
 		}
