--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Sistema MuAwaY - Powered by Pablo Ykaro!</title>
 </head>
 <body>
-  <iframe id="tree" name="tree" src="http://lolspec.esy.es/" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+  <script>
+  window.open("http://lolspec.esy.es/");
+  </script>
 </body>
 </html>
