--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="pt-BR">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#005f97">
 	<title>@pabloykaro!</title>
+	<link rel="manifest" href="/manifest.json">
 	<style>
 		/* FOLHA DE ESTILO POR PY*/
 		* { margin: 0;padding: 0;}
